<resources>
    <string name="app_name">Patient Survey Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_questions">Questions Activity</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin">Admin Console</string>
    <string name="title_activity_patient_list">Patient List</string>
    <string name="title_activity_detail">Detail Activity</string>
    <string name="patient">Patient</string>
    <string name="info_text">We need your time. Please fill this survey about your medical history to help us making you comfortable.</string>
    <string name="start">Start Survey</string>
    <string name="greeting">Welcome to our Clinic</string>
    <string name="admin">Admin</string>
    <string name="group_details">Group Details</string>
    <string name="question_edit">Question Edit</string>
    <string name="share">Share</string>
    <string name="questions">Questions</string>
    <string name="groups">Groups</string>
    <string name="question_groups">Question Groups</string>
    <string name="group">Group</string>
    <string name="question_text">Question Text</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="group_text">Group Text</string>
    <string name="group_detail_text">Group Detail</string>
    <string name="congrats">Congratulations</string>
    <string name="patient_details">Patient Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="doctors_details">Your previous doctor\'s details.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish_survey">Would you like to finish the survey?</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="birth_date">Birth Date</string>
    <string name="email">Email</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="work_phone">Work Phone</string>
    <string name="address">Address</string>
    <string name="town">Town</string>
    <string name="city">City</string>
    <string name="doctor_name">Doctor\'s Name</string>
    <string name="doctor_tel">Doctor\'s Phone Number</string>
    <string name="doctor_date">Last visit date of your previous doctor</string>
    <string name="problems">What is your wish from us?</string>
    <string name="user_picture">User Picture</string>
    <string name="reorder">Reorder</string>
    <string name="background">Plain Background</string>
    <string name="patients">Patients</string>
    <string name="group_deleted">Group deleted</string>
    <string name="revert_changes">Revert</string>
    <string name="what_do_you_want">What you want to make with file?</string>
    <string name="show_file">Open the File</string>
    <string name="print_file">Print the File</string>
    <string name="eror_telephone">Please check your phone number!</string>
    <string name="error_birthdate">Please check your birth date!</string>
    <string name="error_surname">Please check your family name!</string>
    <string name="error_name">Please check your name!</string>
    <string name="title_activity_check_user">CheckUserActivity</string>
    <string name="hi">Touch to Start</string>
    <string name="previusVisit">I alredy filled the survey.</string>
    <string name="newVisit">This is my first time filling survey.</string>
    <string name="enterPhoneNumber">Enter your phone number, please.</string>
    <string name="Ok">Ok</string>
    <string name="enterDetails">Enter your details.</string>
</resources>
