<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".fragment.CheckUserActivityFragment"
    tools:showIn="@layout/activity_check_user">

    <View
        android:layout_width="2dp"
        android:layout_height="200dp"
        android:background="@android:color/black"
        android:id="@+id/divider"
        android:layout_centerInParent="true"
        android:alpha="0.5" />

    <Button
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:text="@string/previusVisit"
        android:id="@+id/button"
        android:layout_alignEnd="@+id/divider"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:text="@string/newVisit"
        android:id="@+id/button2"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/divider"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/phoneLayout"
        android:visibility="invisible"
        android:weightSum="10">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/telInput"
            android:gravity="center_vertical"
            android:layout_weight="9">
            <EditText android:id="@+id/input_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enterPhoneNumber"
                android:inputType="phone"
                 />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Ok"
            android:id="@+id/button3"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</RelativeLayout>
